# r-ps1

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml  build_and_release.yml  release.yml  rust.yml
resources/: icon.rc
src/: lib.rs  main.rs
src/audio/: cpal.rs  mod.rs
src/cheats/: mod.rs
src/core/: mod.rs
src/core/bios/: mod.rs
src/core/cdrom/: commands.rs  cue.rs  disc.rs  mod.rs  read_sector.rs  util.rs  xaadpcm.rs
src/core/clock/: mod.rs
src/core/config/: mod.rs
src/core/controllers/: memory_card.rs  mod.rs
src/core/cpu/: cop0.rs  cop2.rs  disassembler.rs  instruction.rs  mod.rs
src/core/debugger/: mod.rs
src/core/dma/: mod.rs
src/core/emu/: mod.rs
src/core/gpu/: draw_line.rs  draw_polygon.rs  draw_rectangle.rs  gp0.rs  gp1.rs  mod.rs  ps1_gpu_cycles_en.md  timings.rs
src/core/interrupt/: mod.rs
src/core/mdec/: mod.rs
src/core/memory/: bus.rs  mod.rs
src/core/sio/: mod.rs
src/core/snapshot/: mod.rs
src/core/spu/: adpcm.rs  envelope.rs  interpolate.rs  mod.rs  noise.rs  reverb.rs  util.rs  voice.rs
src/core/timer/: mod.rs
src/log/: mod.rs
src/renderer/: mod.rs  pixels.rs  text_renderer.rs
