[package]
name = "r-ps1"
version = "0.1.0"
edition = "2024"

[dependencies]
md5 = "0.8.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
env_logger = "0.11.8"
pixels = "0.15"
winit = "0.30"
build-time = "0.1"
egui = "0.33.3"
egui-winit = "0.33"
egui-wgpu = "0.33.3"
wgpu = "28.0.0"
pollster = "0.3"
regex = "1.12.3"
cpal = "0.17.3"
gilrs = "0.11.1"

[build]
rustflags = ["-C", "target-cpu=native"]

[profile.release]
#debug = true
#opt-level = 3
#lto = "fat"
#codegen-units = 1
#panic = "abort"

[profile.fast]
inherits = "release"
opt-level = 3          # massimo livello di ottimizzazione
lto = "fat"           # link-time optimization completa
codegen-units = 1     # migliore ottimizzazione (più lento compilare)
panic = "abort"       # elimina overhead unwinding
strip = true          # riduce dimensione binario

# opzionale ma utile
debug = false
incremental = false