[package]
name = "r-ps1"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
md5 = "0.8.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
#env_logger = "0.11.8"
pixels = "0.15"
winit = "0.30"
build-time = "0.1"
#egui = "0.33.3"
#egui-winit = "0.33"
#egui-wgpu = "0.33.3"
wgpu = "28.0.0"
#pollster = "0.3"
regex = "1.12.3"
cpal = "0.17.3"
gilrs = "0.11.1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
fast_image_resize = "6.0.0"
image = "0.25.10"

[build-dependencies]
embed-resource = "3.0.8"

[profile.release]
#debug = true
#opt-level = 3
lto = "thin"
codegen-units = 16
incremental = true
#panic = "abort"

[profile.fast]
inherits = "release"
opt-level = 3          # massimo livello di ottimizzazione
lto = "thin"           # link-time optimization più bilanciata
codegen-units = 16     # permette la compilazione parallela (molto più veloce)
panic = "abort"       # elimina overhead unwinding
strip = true          # riduce dimensione binario
# opzionale ma utile
debug = false
incremental = true