[package]
name = "r-ps1"
version = "0.9.0"
edition = "2024"
build = "build.rs"

[dependencies]
md5 = "0.8.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pixels = "0.15"
winit = "0.30"
build-time = "0.1"
wgpu = "28.0.0"
regex = "1.12.3"
cpal = "0.17.3"
gilrs = "0.11.1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
fast_image_resize = "6.0.0"
image = "0.25.10"
zip = "8.6.0"
tempfile = "3.27.0"
fontdue = "0.9"

[build-dependencies]
embed-resource = "3.0.8"

[profile.release]
opt-level = 2
incremental = true
codegen-units = 256
debug = true
lto = false

[profile.fast]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false